--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ pandas==1.4.0
 matplotlib==3.9.2
 seaborn==0.13.2
 scipy==1.14.1
-sklearn==1.5.1
+scikit-learn==1.5.1
 joblib==1.4.2
-imblearn==0.12.3
+imbalanced-learn==0.12.3
